--- a/day2_numpy_test.ipynb
+++ b/day2_numpy_test.ipynb
@@ -2,38 +2,307 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "347ee115",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy: 2.4.1\n",
+      "pandas: 2.3.3\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "print(\"NumPy:\", np.__version__)\n",
+    "print(\"pandas:\", pd.__version__)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "538468b3",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 3,
+   "id": "c650c823",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "arr = np.array([1, 3, 5, 7, 9])\n",
     "print(arr)\n",
     "print(type(arr))  # <class 'numpy.ndarray'>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f1264f5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 5.0\n",
+      "Max: 9\n",
+      "Std: 2.8284271247461903\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_val = arr.mean()          # or np.mean(arr)\n",
+    "max_val = arr.max()            # or np.max(arr)\n",
+    "std_val = arr.std()            # or np.std(arr)\n",
+    "\n",
+    "print(\"Mean:\", mean_val)\n",
+    "print(\"Max:\", max_val)\n",
+    "print(\"Std:\", std_val)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3b2e8938",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  student  score  age\n",
+      "0   Ahmed     85   21\n",
+      "1    Sara     92   22\n",
+      "2    Omar     78   20\n",
+      "3   Laila     90   23\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"student\": [\"Ahmed\", \"Sara\", \"Omar\", \"Laila\"],\n",
+    "    \"score\":   [85, 92, 78, 90],\n",
+    "    \"age\":     [21, 22, 20, 23]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f8b2803b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average score: 86.25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>score</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>86.250000</td>\n",
+       "      <td>21.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.238322</td>\n",
+       "      <td>1.290994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>78.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>83.250000</td>\n",
+       "      <td>20.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>87.500000</td>\n",
+       "      <td>21.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>90.500000</td>\n",
+       "      <td>22.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           score        age\n",
+       "count   4.000000   4.000000\n",
+       "mean   86.250000  21.500000\n",
+       "std     6.238322   1.290994\n",
+       "min    78.000000  20.000000\n",
+       "25%    83.250000  20.750000\n",
+       "50%    87.500000  21.500000\n",
+       "75%    90.500000  22.250000\n",
+       "max    92.000000  23.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "avg_score = df.score.mean()\n",
+    "print(\"Average score:\", avg_score)\n",
+    "df.describe()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f1c07237",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student</th>\n",
+       "      <th>score</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ahmed</td>\n",
+       "      <td>85</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sara</td>\n",
+       "      <td>92</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Omar</td>\n",
+       "      <td>78</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Laila</td>\n",
+       "      <td>90</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  student  score  age\n",
+       "0   Ahmed     85   21\n",
+       "1    Sara     92   22\n",
+       "2    Omar     78   20\n",
+       "3   Laila     90   23"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()          # first 5 rows\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
