--- a/Titanic/titanic.ipynb
+++ b/Titanic/titanic.ipynb
@@ -12,10 +12,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "365a8001",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          714 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.7+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      0\n",
+       "Survived         0\n",
+       "Pclass           0\n",
+       "Name             0\n",
+       "Sex              0\n",
+       "Age            177\n",
+       "SibSp            0\n",
+       "Parch            0\n",
+       "Ticket           0\n",
+       "Fare             0\n",
+       "Cabin          687\n",
+       "Embarked         2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"Titanic-Dataset.csv\")  # or the exact filename you downloaded\n",
     "\n",
@@ -27,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0805140e",
    "metadata": {},
    "outputs": [
@@ -37,7 +85,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "07a98af5",
    "metadata": {},
    "outputs": [
@@ -95,7 +143,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "fa599d57",
    "metadata": {},
    "outputs": [
@@ -128,7 +176,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "18d3a806",
    "metadata": {},
    "outputs": [
@@ -163,7 +211,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "4835e5bb",
    "metadata": {},
    "outputs": [
@@ -187,7 +235,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "0dce5b62",
    "metadata": {},
    "outputs": [
@@ -212,7 +260,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "09cd385a",
    "metadata": {},
    "outputs": [
@@ -237,7 +285,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "c65844d3",
    "metadata": {},
    "outputs": [
@@ -267,7 +315,7 @@
        "np.float64(29.69911764705882)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "cc71fdd2",
    "metadata": {},
    "outputs": [
@@ -288,7 +336,7 @@
        "113"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "c919d1e3",
    "metadata": {},
    "outputs": [
@@ -310,7 +358,7 @@
        "np.float64(53.98230088495575)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "35b52128",
    "metadata": {},
    "outputs": [
@@ -412,7 +460,7 @@
        "4      0      0           1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "19ffb8df",
    "metadata": {},
    "outputs": [
@@ -504,7 +552,7 @@
        "4           1        1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "5bb36c58",
    "metadata": {},
    "outputs": [
@@ -552,7 +600,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "5a6d2a0b",
    "metadata": {},
    "outputs": [
@@ -583,7 +631,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "38729c79",
    "metadata": {},
    "outputs": [
@@ -607,7 +655,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,6 +735,278 @@
     "\n",
     ".mean() * 100 → survival rate (%) inside that group, not percentages that must sum to 100 across groups.\n",
     "​"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b72f3b71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Age\"] = df[\"Age\"].fillna(df[\"Age\"].median())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de8bdb6",
+   "metadata": {},
+   "source": [
+    "fill the blanks with the median."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f050e2ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Embarked\"] = df[\"Embarked\"].fillna(df[\"Embarked\"].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "13bfedf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Sex_encoded\"] = (df[\"Sex\"] == \"female\").astype(int) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60fd63be",
+   "metadata": {},
+   "source": [
+    "Females are encoded as 1 and males as 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7107370b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sys import prefix\n",
+    "Embarked_dummies = pd.get_dummies(df[\"Embarked\"],prefix=\"Embarked\")\n",
+    "df = pd.concat([df,Embarked_dummies],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b40dea",
+   "metadata": {},
+   "source": [
+    "seperate Embarked into 3 different columns and then add them to the dataframe by concatentation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e802fb95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_cols = [\n",
+    "    \"Pclass\",\n",
+    "    \"Sex_encoded\",\n",
+    "    \"Age\",\n",
+    "    \"Fare\",\n",
+    "    \"FamilySize\",\n",
+    "    \"IsAlone\",\n",
+    "    \"Embarked_C\",\n",
+    "    \"Embarked_Q\",\n",
+    "    \"Embarked_S\",\n",
+    "]\n",
+    "\n",
+    "X = df[feature_cols]\n",
+    "y = df[\"Survived\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "446fb0f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c3d92934",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.80\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\megz\\Documents\\Projects\\Ai\\Learning\\.venv\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:406: ConvergenceWarning: lbfgs failed to converge after 100 iteration(s) (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
+      "\n",
+      "Increase the number of iterations to improve the convergence (max_iter=100).\n",
+      "You might also want to scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {acc:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cbaa0f0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>coef</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sex_encoded</td>\n",
+       "      <td>2.578121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Embarked_Q</td>\n",
+       "      <td>0.831951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Embarked_C</td>\n",
+       "      <td>0.623802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Embarked_S</td>\n",
+       "      <td>0.294371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fare</td>\n",
+       "      <td>0.002754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Age</td>\n",
+       "      <td>-0.035020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FamilySize</td>\n",
+       "      <td>-0.281936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>IsAlone</td>\n",
+       "      <td>-0.445071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pclass</td>\n",
+       "      <td>-0.997791</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Feature      coef\n",
+       "1  Sex_encoded  2.578121\n",
+       "7   Embarked_Q  0.831951\n",
+       "6   Embarked_C  0.623802\n",
+       "8   Embarked_S  0.294371\n",
+       "3         Fare  0.002754\n",
+       "2          Age -0.035020\n",
+       "4   FamilySize -0.281936\n",
+       "5      IsAlone -0.445071\n",
+       "0       Pclass -0.997791"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeffs = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Feature\": feature_cols,\n",
+    "        \"coef\": model.coef_[0],\n",
+    "    }\n",
+    ").sort_values(\"coef\", ascending=False)\n",
+    "coeffs   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf3be5de",
+   "metadata": {},
+   "source": [
+    "that being a female, in a better class, paying higher fare, and not being alone all push predictions toward “survived,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d44388d",
+   "metadata": {},
+   "source": [
+    "Accuracy (0.80).\n",
+    "\n",
+    "Top positive features (e.g., Sex_encoded, Embarked_*).\n",
+    "\n",
+    "Top negative features (Pclass, IsAlone, FamilySize)."
    ]
   }
  ],
